# malicious-PPML

./: CMakeLists.txt  main.cpp  party0.cpp  party1.cpp
data/: lenet_mnist_model  mnist_b.txt  mnist_w.txt  train-images.idx3-ubyte
experiment/: CMakeLists.txt  README.md
experiment/AlexNet/: AlexNetConfig.h  AlexNetFakeOffline.cpp  AlexNetParty0.cpp  AlexNetParty1.cpp  CMakeLists.txt
experiment/AvgPool/: AvgPoolConfig.h  AvgPoolFakeOffline.cpp  AvgPoolParty0.cpp  AvgPoolParty1.cpp  CMakeLists.txt
experiment/FC/: CMakeLists.txt  FCConfig.h  FCFakeOffline.cpp  FCParty0.cpp  FCParty1.cpp
experiment/ReLU/: CMakeLists.txt  ReLUConfig.h  ReLUFakeOffline.cpp  ReLUParty0.cpp  ReLUParty1.cpp
experiment/argmax/: ArgmaxConfig.h  ArgmaxFakeOffline.cpp  ArgmaxParty0.cpp  ArgmaxParty1.cpp  CMakeLists.txt
experiment/comparison/: CMakeLists.txt  ComparisonConfig.h  ComparisonFakeOffline.cpp  ComparisonParty0.cpp  ComparisonParty1.cpp
experiment/conv2D/: CMakeLists.txt  Conv2DConfig.h  Conv2DFakeOffline.cpp  Conv2DParty0.cpp  Conv2DParty1.cpp
experiment/elemMultiplication/: CMakeLists.txt  ElemConfig.h  ElemFakeOffline.cpp  ElemParty0.cpp  ElemParty1.cpp
experiment/lenet/: CMakeLists.txt  LenetConfig.h  LenetFakeOffline.cpp  LenetParty0.cpp  LenetParty1.cpp
experiment/multiplication/: CMakeLists.txt  MultiplicationFakeOffline.cpp  MultiplicationParty0.cpp  MultiplicationParty1.cpp  multiplicationConfig.h
experiment/multiply-trunc/: CMakeLists.txt  MultiplyTruncConfig.h  MultiplyTruncFakeOffline.cpp  MultiplyTruncParty0.cpp  MultiplyTruncParty1.cpp
experiment/resnet18/: CMakeLists.txt  readmodel.cpp  resnet18Config.h  resnet18FakeOffline.cpp  resnet18Party0.cpp  resnet18Party1.cpp
experiment/resnet18-ImageNet/: CMakeLists.txt  resnet18Config.h  resnet18Party1.cpp
experiment/svm/: CMakeLists.txt  SVMConfig.h  SVMFakeOffline.cpp  SVMParty0.cpp  SVMParty1.cpp
network/: CMakeLists.txt
network/application/: run-player0.cpp  run-player1.cpp
network/network/: network.cpp  network.h
sh/: spdz2k_test.sh
src/network/: CMakeLists.txt  network.cpp  network.h
src/network/application/: run-player0.cpp  run-player1.cpp
src/networking/: CMakeLists.txt  Network.cpp  Network.h
src/networking/application/: partyTest0.cpp  partyTest1.cpp  run-player0.cpp  run-player1.cpp  run-player2.cpp
src/offline/: CMakeLists.txt  FakeCircuit.h  FakeGate.h  FakeOffline.cpp  FakeOffline.h  FakeOfflineBase.h  FakeOfflineGate.h  FakeOfflineMain.cpp  offline_fake_main.cpp
src/protocols/: AddConstantGate.h  AdditionGate.h  ArgmaxGate.h  AvgPool2DGate.h  Circuit.h  Conv2DGate.h  Conv2DTruncGate.h  DummyInputGate.h  ElemMultiplicationGate.h  Gate.cpp  Gate.h  GateOffline.cpp  GateOffline.h  GtzGate.h  InputGate.h  LtzGate.h  MultiplicationGate.h  MultiplyByConstantGate.h  MultiplyTruncGate.h  OperationOffline.cpp  OperationOffline.h  OutputGate.h  ReLUGate.h  SliceGate.h  SubtractGate.h  SubtractionGate.h
src/share/: CMakeLists.txt  Share.cpp  Share.h  Spdz2kShare.cpp  Spdz2kShare.h  types.h  uint128.cpp  uint128.h
src/utils/: Party.cpp  Party.h  benchmark.h  fileIO.h  fixedPoint.h  ioHelper.h  linear_algebra.h  rand.h  tensor.h  uint128.h
tests/: CMakeLists.txt  CircuitTest.cpp  FakeCircuitTest.cpp  FakeOfflineGateTest.cpp  FakeOfflineTest.cpp  Spdz2kShareTest.cpp
